--- a/fun.ipynb
+++ b/fun.ipynb
@@ -1789,14 +1789,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You entered -9, which is not a positive number.\n"
+      "Square Root of 96 is 9.797958971132712\n"
      ]
     }
    ],
@@ -1809,7 +1809,7 @@
     "    print(f'Square Root of {x} is {math.sqrt(x)}')\n",
     "except ValueError:\n",
     "    print(f'You entered {x}, which is not a positive number.')\n",
-    "else"
+    "    \n"
    ]
   },
   {
@@ -2872,6 +2872,42 @@
     "        if line[1]==\"TV Show\":\n",
     "            if line[7]==\"2021\":\n",
     "                print(line[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "computer \t science1\n",
+      "computer \t science2\n",
+      "computer \t science3\n",
+      "computer \t science4\n",
+      "computer \t science5\n",
+      "computer \t science6\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"computer \\t science1\")\n",
+    "print(\"computer \\t science2\")\n",
+    "print(\"computer \\t science3\")\n",
+    "print(\"computer \\t science4\")\n",
+    "print(\"computer \\t science5\")\n",
+    "print(\"computer \\t science6\")\n",
+    "\n",
+    "\n"
    ]
   }
  ],
