--- a/program/assondataset.ipynb
+++ b/program/assondataset.ipynb
@@ -939,84 +939,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name: iPhone 13 Pro\n",
-      "Name: 9 Pro\n",
-      "Name: Redmi Note 10 Pro\n",
-      "Name: Pixel 6\n",
-      "Name: iPhone 13\n",
-      "Name: Poco X3 Pro\n",
-      "Name: Reno6 Pro+ 5G\n",
-      "Name: Nord CE 5G\n",
-      "Name: Galaxy A52s 5G\n",
-      "Name: GT Neo2\n",
-      "Name: Mi 11 Lite 5G NE\n",
-      "Name: Galaxy S21\n",
-      "Name: Y20s (G)\n",
-      "Name: 8s 5G\n",
-      "Name: A94\n",
-      "Name: Redmi 10 Prime\n",
-      "Name: Galaxy A22 5G\n",
-      "Name: Narzo 50 Pro 5G\n",
-      "Name: 9\n",
-      "Name: Redmi Note 10 Pro Max\n",
-      "Name: A74 5G\n",
-      "Name: 9i\n",
-      "Name: Galaxy M52 5G\n",
-      "Name: Redmi 10\n",
-      "Name: A53s\n",
-      "Name: Y33s\n",
-      "Name: C25s\n",
-      "Name: Galaxy A22 4G\n",
-      "Name: Nord 2 5G\n",
-      "Name: F19 Pro+ 5G\n",
-      "Name: Mi 11X\n",
-      "Name: V21e\n",
-      "Name: 8 5G\n",
-      "Name: Redmi 9 Power\n",
-      "Name: Galaxy A52s 5G\n",
-      "Name: A54\n",
-      "Name: Redmi 9T\n",
-      "Name: Y33\n",
-      "Name: Galaxy A72\n",
-      "Name: Reno6 Pro 5G\n",
-      "Name: Y53s\n",
-      "Name: 7i\n",
-      "Name: Galaxy A52 5G\n",
-      "Name: F19 Pro\n",
-      "Name: Redmi Note 10S\n",
-      "Name: Y21s\n",
-      "Name: C25s\n",
-      "Name: Galaxy A22 5G\n",
-      "Name: A94\n",
-      "Name: Mi 11 Lite 5G\n",
-      "Name: iPhone 11\n"
+      "Name: Samsung brand: Galaxy S21 Ultra\n",
+      "Name: Samsung brand: Galaxy Z Flip3\n",
+      "Name: Vivo brand: X70 Pro+\n",
+      "Name: Oppo brand: Find X3 Pro\n",
+      "Name: Apple brand: iPhone 11 Pro Max\n",
+      "Name: Apple brand: iPhone 13 Pro Max\n",
+      "Name: Vivo brand: X60 Pro\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "with open(\"E:/Fullstack/dataset/Mobile phone price.csv\",\"r\") as file_object:\n",
+    "\n",
+    "    data = csv.reader(file_object) # it will read the data from csv file store in data\n",
+    "    \n",
+    "    for line in data:   # reads from iterable data object and puts each line in line object for  every loop\n",
+    "        \n",
+    "        if line[2]==\"256 GB\":\n",
+    "            print(\"Name:\",line[0],\"brand:\",line[1])\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['s191', 'Movie', 'Thimmarusu', 'Sharan Koppisetty', 'Satya Dev, Priyanka Jawalkar, Brahmaji', 'India', 'August 28, 2021', '2021', 'TV-14', '125 min', 'Dramas, International Movies', 'Eight years after a young man is framed for murder, an up-and-coming lawyer re-opens the case, beginning a tricky mission to find the real culprit.']\n",
+      "['s552', 'Movie', 'Haseen Dillruba', 'Vinil Mathew', 'Taapsee Pannu, Vikrant Massey, Harshvardhan Rane, Aditya Srivastava, Ashish Verma, Yamini Das, Daya Shankar Pandey', 'India', 'July 2, 2021', '2021', 'TV-MA', '136 min', 'International Movies, Romantic Movies, Thrillers', 'Under investigation as a suspect in her husband’s murder, a wife reveals details of their thorny marriage that seem to only further blur the truth.']\n",
+      "['s736', 'Movie', 'Sarbath', 'Prabhakaran', 'Kathir, Soori, Rahasya Gorak, Ashvatt', 'India', 'June 11, 2021', '2021', 'TV-PG', '113 min', 'Comedies, Dramas, International Movies', 'When a city man returns to his native village for his brother’s wedding, several unforeseen snags make his visit more eventful than anticipated.']\n",
+      "['s851', 'Movie', '99 Songs', 'Vishwesh Krishnamoorthy', 'Ehan Bhat, Edilsy Vargas, Manisha Koirala, Lisa Ray, Tenzin Dalha, Warina Hussain, Ranjit Barot, Neel Tyagi, Rahul Ram, Diwakar Pundir', 'India', 'May 21, 2021', '2021', 'TV-14', '131 min', 'Dramas, International Movies, Music & Musicals', 'Challenged to compose 100 songs before he can marry the girl he loves, a tortured but passionate singer-songwriter embarks on a poignant musical journey.']\n",
+      "['s872', 'Movie', 'Sardar Ka Grandson', 'Kaashvie Nair', 'Arjun Kapoor, Neena Gupta, Rakul Preet Singh, Kumud Mishra, Aditi Rao Hydari, John Abraham, Kanwaljeet Singh, Soni Razdan, Masood Akhtar, Divya Seth, Ravjeet Singh, Akashdeep Sabir', 'India', 'May 18, 2021', '2021', 'TV-14', '140 min', 'Comedies, Dramas, International Movies', 'A devoted grandson’s mission to reunite his ailing grandmother with her ancestral home turns into a complicated, comic cross-border affair.']\n",
+      "['s874', 'Movie', 'Ahaan', 'Nikhil Pherwani', 'Arif Zakaria, Abuli Mamaji, Niharika Singh, Rajit Kapoor, Plabita Borthakur, Shilpa Mehta, Kaizaad Kotwal, Sonali Sachdev, Haresh Raut', 'India', 'May 15, 2021', '2021', 'TV-MA', '81 min', 'Dramas, Independent Movies, International Movies', 'Jilted by his wife, a man with OCD finds eye-opening common ground and camaraderie with his neighbor, a young man with Down Syndrome.']\n",
+      "['s878', 'Movie', 'Cinema Bandi', 'Praveen Kandregula', 'Vikas Vasistha, Sandeep Varanasi, Rag Mayur, Trishara, Munivenkatapa, Uma Yg, Sirivennela Yanamandhala, Sindhu Sreenivasa Murthy', 'India', 'May 14, 2021', '2021', 'TV-MA', '99 min', 'Comedies, Independent Movies, International Movies', 'A struggling rickshaw driver’s life takes a rollicking turn when he comes upon an expensive camera and decides to make a film with his fellow villagers.']\n",
+      "['s904', 'Movie', 'Nayattu', 'Martin Prakkat', 'Kunchacko Boban, Joju George, Nimisha Sajayan, Jaffer Idukki, Yama Gilgamesh, Anil Nedumangad, Dineesh P, Vinod Sagar', 'India', 'May 9, 2021', '2021', 'TV-MA', '122 min', 'Dramas, International Movies, Thrillers', 'Three police officers become pawns for unscrupulous lawmakers when they are framed in an incident amid political elections and must flee to evade arrest.']\n",
+      "['s910', 'Movie', 'Milestone', 'Ivan Ayr', 'Suvinder Vicky, Lakshvir Saran, Mohinder Gujral, Gurinder Makna, Daljeet Singh, Akhilesh Kumar, Gaurika Bhatt, Arun Aseng', 'India', 'May 7, 2021', '2021', 'TV-14', '98 min', 'Dramas, Independent Movies, International Movies', 'Recently marking 500,000 kilometers on the road, a newly bereaved trucker faces the threat of losing the job that has come to define him to a new intern.']\n",
+      "['s960', 'Movie', 'The Disciple', 'Chaitanya Tamhane', 'Aditya Modak, Arun Dravid, Sumitra Bhave, Deepika Bhide Bhagwat, Kiran Yadnyopavit, Abhishek Kale, Neela Khedkar, Makarand Mukund, Kristy Banerjee, Prasad Vanarse', 'India', 'April 30, 2021', '2021', 'TV-MA', '128 min', 'Dramas, Independent Movies, International Movies', 'Self-doubt, sacrifice and struggle converge into an existential crisis for a devoted classical vocalist as the mastery he strives for remains elusive.']\n",
+      "['s999', 'Movie', 'Searching For Sheela', '', 'Ma Anand Sheela', 'India', 'April 22, 2021', '2021', 'TV-14', '58 min', 'Documentaries, International Movies', 'Journalists and fans await Ma Anand Sheela as the infamous former Rajneesh commune’s spokesperson returns to India after decades for an interview tour.']\n",
+      "['s1024', 'Movie', 'Ajeeb Daastaans', 'Shashank Khaitan, Raj Mehta, Neeraj Ghaywan, Kayoze Irani', 'Fatima Sana Shaikh, Jaideep Ahlawat, Armaan Ralhan, Nushrat Bharucha, Abhishek Banerjee, Inayat Verma, Konkona Sen Sharma, Aditi Rao Hydari, Shefali Shah, Manav Kaul, Tota Roy Chowdhury', 'India', 'April 16, 2021', '2021', 'TV-MA', '142 min', 'Dramas, Independent Movies, International Movies', 'Four shorts explore the surprising ways in which unexpected catalysts inflame the uncomfortable emotions simmering under fractured relationships.']\n",
+      "['s1038', 'Movie', 'Tuesdays & Fridays', 'Taranveer Singh', 'Anmol Thakeria Dhillon, Jhataleka, Niki Walia, Kamini Khanna, Zoa Morani, Nayan Shukla, Eklavyey Kashyap, Reem Shaikh', 'India', 'April 16, 2021', '2021', 'TV-14', '106 min', 'Comedies, Dramas, International Movies', 'To avoid the burden of commitment, a young lawyer and a writer agree to be romantic partners only two days a week. That won’t get complicated — right?']\n",
+      "['s1088', 'Movie', 'Roohi', 'Hardik Mehta', \"Rajkummar Rao, Varun Sharma, Janhvi Kapoor, Manav Vij, Sarita Joshi, Anuraag Arora, Alexx O'Nell, Rajesh Jais\", 'India', 'April 9, 2021', '2021', 'TV-14', '133 min', 'Comedies, Horror Movies, International Movies', 'Hired to kidnap a bride, two bumbling pals face a wacky predicament when one falls for their abductee — and the other, for the spirit possessing her.']\n",
+      "['s1099', 'Movie', 'Mandela', 'Madonne Ashwin', 'Yogi Babu, Sheela Rajkumar, Sangili Murugan, G. M. Sundhar', 'India', 'April 5, 2021', '2021', 'TV-14', '140 min', 'Comedies, Dramas, International Movies', 'Amid a local election with two rivals vying to win by any means necessary, a barber lands in a curiously powerful position as the single deciding vote.']\n",
+      "['s1109', 'Movie', 'Irul', 'Naseef Yusuf Izuddin', 'Fahadh Faasil, Soubin Shahir, Darshana Rajendran', 'India', 'April 2, 2021', '2021', 'TV-MA', '91 min', 'International Movies, Thrillers', 'When a car breakdown forces a couple to seek shelter in a nearby home, conversations with the stranger inside soon suggest there’s a killer among them.']\n",
+      "['s1166', 'Movie', 'Pagglait', 'Umesh Bist', 'Sanya Malhotra, Sayani Gupta, Ashutosh Rana, Raghuvir Yadav, Shruti Sharma, Sheeba Chaddha, Natasha Rastogi, Rajesh Tailang, Meghna Malik, Jameel Khan, Chetan Sharma, Ananya Khare, Bhupesh Pandya', 'India', 'March 26, 2021', '2021', 'TV-PG', '114 min', 'Comedies, Dramas, International Movies', 'Widowed soon after marriage, a young woman grapples with an inability to grieve, quirky relatives and a startling discovery about her late husband.']\n",
+      "['s1203', 'Movie', 'C/O Kaadhal', 'Hemambar Jasti', 'Deepann, Vetri, Mumtaz Sorcar, Ayra, Karthik Rathnam, Sonia Giri, Nishesh, Shwetha', 'India', 'March 15, 2021', '2021', 'TV-14', '131 min', 'Dramas, International Movies, Romantic Movies', 'Cutting across conventions and expectations, four brave love stories blossom in this Tamil remake of the 2018 Telugu film \"Care of Kancharapalem.”']\n",
+      "['s1231', 'Movie', 'Aelay', 'Halitha Shameem', 'P. Samuthirakani, Manikandan, Madhumathi Padmanathan, Akalyadevi B., S I Neelambari', 'India', 'March 5, 2021', '2021', 'TV-14', '151 min', 'Comedies, Dramas, Independent Movies', 'A son stoically returns to his village upon his father’s death, recalling their chilly dynamic before a bizarre event disrupts his visit.']\n",
+      "['s1266', 'Movie', 'The Girl on the Train', 'Ribhu Dasgupta', 'Parineeti Chopra, Aditi Rao Hydari, Kirti Kulhari, Avinash Tiwary, Tota Roy Chowdhury', 'India', 'February 26, 2021', '2021', 'TV-MA', '120 min', 'International Movies, Thrillers', 'A troubled divorcée fixates on a seemingly ideal couple from afar until a shocking observation sends her spiraling straight into a knotty murder case.']\n",
+      "['s1282', 'Movie', 'Red', 'Tirumala Kishore', 'Ram Pothineni, Nivetha Pethuraj, Malvika Sharma, Amritha Aiyer, Sampath Raj', 'India', 'February 23, 2021', '2021', 'TV-14', '143 min', 'Dramas, International Movies', 'A murder investigation leads police to a photo of a suspect, but when two men are found with faces that match the picture, the case gets doubly tricky.']\n",
+      "['s1411', 'Movie', 'Tribhanga - Tedhi Medhi Crazy', 'Renuka Shahane', 'Kajol, Tanvi Azmi, Mithila Palkar, Kunaal Roy Kapur, Vaibhav Tatwawaadi, Kanwaljeet Singh, Manav Gohil, Shweta Mehendale', 'India', 'January 15, 2021', '2021', 'TV-MA', '96 min', 'Dramas, International Movies', 'When her estranged mother falls into a coma, a self-made single mom grapples with regret and resentment while reflecting on their strained relationship.']\n"
      ]
     }
    ],
    "source": [
     "import csv\n",
     "\n",
-    "i=0\n",
-    "max=1\n",
-    "with open(\"E:/Fullstack/dataset/Mobile phone price.csv\",\"r\") as file_object:\n",
-    "\n",
-    "    data = csv.reader(file_object) # it will read the data from csv file store in data\n",
+    "with open(\"E:/Fullstack/dataset/netflix_titles.csv\",\"r\") as file_object:\n",
+    "    reader_object = csv.reader(file_object)\n",
     "    \n",
-    "    for line in data:   # reads from iterable data object and puts each line in line object for  every loop\n",
-    "        i=i+1\n",
+    "    for row_of_excell in reader_object:\n",
+    "        if row_of_excell[1]=='Movie' and row_of_excell[7]=='2021' and row_of_excell[5]=='India':\n",
+    "        # if row_of_excell[7]=='2020':\n",
     "        \n",
-    "        if i==1:\n",
-    "            continue\n",
-    "        if line[2]==\"128 GB\":\n",
-    "            print(\"Name:\",line[1])\n",
-    "        "
+    "            print(row_of_excell)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "\n",
+    "with open(\"E:/Fullstack/dataset/covid.csv\",\"r\") as file_object:\n",
+    "    reader_object= csv.reader(file_object)\n",
+    "    \n",
+    "    "
    ]
   }
  ],
