--- a/program/Python_pritical.ipynb
+++ b/program/Python_pritical.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -78,22 +78,24 @@
     }
    ],
    "source": [
-    "num = int(input(\"Enter a number: \"))\n",
+    "def prime():\n",
+    "    num = int(input(\"Enter a number: \"))\n",
     "\n",
-    "flag = False\n",
+    "    flag = False\n",
     "\n",
-    "if num == 1:\n",
-    "    print(num, \"is not a prime number\")\n",
-    "elif num > 1:\n",
-    "    for i in range(2, num):\n",
-    "        if (num % i) == 0:\n",
-    "            flag = True\n",
-    "            break\n",
-    "\n",
-    "    if flag:\n",
+    "    if num == 1:\n",
     "        print(num, \"is not a prime number\")\n",
-    "    else:\n",
-    "        print(num, \"is a prime number\")"
+    "    elif num > 1:\n",
+    "        for i in range(2, num):\n",
+    "            if (num % i) == 0:\n",
+    "                flag = True\n",
+    "                break\n",
+    "\n",
+    "        if flag:\n",
+    "            print(num, \"is not a prime number\")\n",
+    "        else:\n",
+    "            print(num, \"is a prime number\")\n",
+    "prime()"
    ]
   },
   {
@@ -106,14 +108,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The lagest element is 4\n"
+      "The largest element is 9\n"
      ]
     }
    ],
@@ -139,14 +141,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "187.5\n"
+      "1125.0\n"
      ]
     }
    ],
