--- a/program/module_4.ipynb
+++ b/program/module_4.ipynb
@@ -156,6 +156,42 @@
    "source": [
     "np.concatenate((a,b),axis=1)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "stack()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 0,  1,  2],\n",
+       "        [ 3,  4,  5]],\n",
+       "\n",
+       "       [[ 5,  6,  7],\n",
+       "        [ 8,  9, 10]]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=np.arange(6).reshape(2,3)\n",
+    "# print(a)\n",
+    "b=np.arange(5,11).reshape(2,3)\n",
+    "# print(b)\n",
+    "np.stack((a,b))"
+   ]
   }
  ],
  "metadata": {
