--- a/program/module_4.ipynb
+++ b/program/module_4.ipynb
@@ -167,30 +167,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 0  5]\n",
+      "  [ 1  6]\n",
+      "  [ 2  7]]\n",
+      "\n",
+      " [[ 3  8]\n",
+      "  [ 4  9]\n",
+      "  [ 5 10]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a=np.arange(6).reshape(2,3)\n",
+    "# print(a)\n",
+    "b=np.arange(5,11).reshape(2,3)\n",
+    "# print(b)\n",
+    "c=np.stack((a,b),axis=-1)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "vstack()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[ 0,  1,  2],\n",
-       "        [ 3,  4,  5]],\n",
-       "\n",
-       "       [[ 5,  6,  7],\n",
-       "        [ 8,  9, 10]]])"
+       "array([[ 0,  1,  2],\n",
+       "       [ 3,  4,  5],\n",
+       "       [ 5,  6,  7],\n",
+       "       [ 8,  9, 10]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import numpy as np\n",
     "a=np.arange(6).reshape(2,3)\n",
     "# print(a)\n",
     "b=np.arange(5,11).reshape(2,3)\n",
-    "# print(b)\n",
-    "np.stack((a,b))"
+    "np.vstack((a,b))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "hstack()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  6,  7,  8],\n",
+       "       [ 3,  4,  5,  9, 10, 11]])"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a=np.arange(6).reshape(2,3)\n",
+    "# print(a)\n",
+    "b=np.arange(6,12).reshape(2,3)\n",
+    "np.hstack((a,b))"
    ]
   }
  ],
