--- a/program/module_4.ipynb
+++ b/program/module_4.ipynb
@@ -261,6 +261,154 @@
     "b=np.arange(6,12).reshape(2,3)\n",
     "np.hstack((a,b))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2]\n",
+      " [ 3  4  5]\n",
+      " [ 5  6  7]\n",
+      " [ 8  9 10]\n",
+      " [12 13 14]\n",
+      " [15 16 17]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=np.arange(6).reshape(2,3)\n",
+    "# print(a)\n",
+    "b=np.arange(5,11).reshape(2,3)\n",
+    "# print(b)\n",
+    "c=np.arange(12,18).reshape(2,3)\n",
+    "# print(c)\n",
+    "result=np.vstack((a,b,c))\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  5  6  7 12 13 14]\n",
+      " [ 3  4  5  8  9 10 15 16 17]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=np.arange(6).reshape(2,3)\n",
+    "# print(a)\n",
+    "b=np.arange(5,11).reshape(2,3)\n",
+    "# print(b)\n",
+    "c=np.arange(12,18).reshape(2,3)\n",
+    "# print(c)\n",
+    "result=np.hstack((a,b,c))\n",
+    "print(result)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "dstack()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 0  5 12]\n",
+      "  [ 1  6 13]\n",
+      "  [ 2  7 14]]\n",
+      "\n",
+      " [[ 3  8 15]\n",
+      "  [ 4  9 16]\n",
+      "  [ 5 10 17]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=np.arange(6).reshape(2,3)\n",
+    "# print(a)\n",
+    "b=np.arange(5,11).reshape(2,3)\n",
+    "# print(b)\n",
+    "c=np.arange(12,18).reshape(2,3)\n",
+    "# print(c)\n",
+    "result=np.dstack((a,b,c))\n",
+    "print(result)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PANDAS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "series()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1\n",
+       "1    2\n",
+       "2    3\n",
+       "3    4\n",
+       "4    5\n",
+       "5    6\n",
+       "dtype: int32"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "a=np.array([1,2,3,4,5,6])\n",
+    "S=pd.Series((a))\n",
+    "S\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
