--- a/program/module_4.ipynb
+++ b/program/module_4.ipynb
@@ -1,11 +1,545 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Numpy Practice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.21.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "print(np.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(10)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr=np.array(10)\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10, 11])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr= np.array([10,11])\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[10 11]\n",
+      " [12 13]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr= np.array([[10,11],[12,13]])\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Array in numpy with all dimensions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "[1 2]\n",
+      "[[1 2]\n",
+      " [3 4]]\n",
+      "[[[1 2]\n",
+      "  [3 4]]\n",
+      "\n",
+      " [[5 6]\n",
+      "  [7 8]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.array(10) )# 0D\n",
+    "\n",
+    "print(np.array([1,2])) # 1D\n",
+    "\n",
+    "print(np.array([[1,2],[3,4]])) # 2D\n",
+    "\n",
+    "print(np.array([  [  [1,2],[3,4]  ]  ,  [   [5,6],[7,8]  ]  ])) # 3D"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ndmin=5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1  2  3  4  5]]\n",
+      "\n",
+      " [[ 6  7  8  9 10]]\n",
+      "\n",
+      " [[ 6  7  8  9 10]]]\n",
+      "(3, 1, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([[[1,2,3,4,5]],[[6,7,8,9,10]],[[6,7,8,9,10]]])\n",
+    "print(arr)\n",
+    "# print(arr.ndim)\n",
+    "print(arr.shape)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "filling arrays with auto elements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0. 0. 0. 0. 0.]]\n",
+      "\n",
+      " [[0. 0. 0. 0. 0.]]\n",
+      "\n",
+      " [[0. 0. 0. 0. 0.]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "arr = np.zeros((3,1,5))\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]\n",
+      "  [1. 1. 1.]\n",
+      "  [1. 1. 1.]\n",
+      "  [1. 1. 1.]\n",
+      "  [1. 1. 1.]\n",
+      "  [1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]\n",
+      "  [1. 1. 1.]\n",
+      "  [1. 1. 1.]\n",
+      "  [1. 1. 1.]\n",
+      "  [1. 1. 1.]\n",
+      "  [1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]\n",
+      "  [1. 1. 1.]\n",
+      "  [1. 1. 1.]\n",
+      "  [1. 1. 1.]\n",
+      "  [1. 1. 1.]\n",
+      "  [1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]\n",
+      "  [1. 1. 1.]\n",
+      "  [1. 1. 1.]\n",
+      "  [1. 1. 1.]\n",
+      "  [1. 1. 1.]\n",
+      "  [1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr=np.ones((4,8,3))\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10 13 16 19]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr= np.arange(10,21,3)\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sorting Arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6 7 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr= np.array([2,1,5,6,3,8,7,4])\n",
+    "\n",
+    "sorted_array= np.sort(arr)\n",
+    "print(sorted_array)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sort alphabets or names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Apple' 'Tea' 'Zebra']\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr= np.array([\"Apple\",\"Zebra\",\"Tea\"])\n",
+    "\n",
+    "sorted_array= np.sort(arr)\n",
+    "print(sorted_array)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sorting 2d array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2 3 6]\n",
+      " [5 6 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr=np.array([[6,2,3],[9,5,6]])\n",
+    "print( np.sort(arr)  )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[50 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr= np.array([50,20,300,40,-5,65,70,85])\n",
+    "\n",
+    "print(arr[0:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[10 20 21 22 25]\n",
+      " [30 40 41 42 43]]\n",
+      "41\n"
+     ]
+    }
+   ],
+   "source": [
+    "mat=np.array([[10,20,21,22,25],[30,40,41,42,43]])\n",
+    "print(mat)\n",
+    "print(mat[1,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[21 22 25]\n",
+      "  [41 42 43]]\n",
+      "\n",
+      " [[50 51 52]\n",
+      "  [60 61 62]]]\n",
+      "Value: 62\n"
+     ]
+    }
+   ],
+   "source": [
+    "mat=np.array([  [[21,22,25],[41,42,43]]  , [[50,51,52],[60,61,62]]  ])\n",
+    "print(mat)\n",
+    "print(\"Value:\",mat[1,1,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr=np.array([1,2,3,4,5,6])\n",
+    "\n",
+    "print(arr[1:5:1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6 7 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr=np.array([[1,2,3,4],[5,6,7,8]])\n",
+    "\n",
+    "print(arr[1,1:4])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([2, 5], dtype=int64),)\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr=np.array([2,50,40,60,70,40])\n",
+    "\n",
+    "val=np.where(arr==40)\n",
+    "\n",
+    "print(val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 2, 3], dtype=int64)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr=np.array([10,20,50,60])\n",
+    "\n",
+    "val=np.searchsorted(arr,[-10,40,55])\n",
+    "val"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "reshape array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr=np.array([[1,2,],[3,4]])\n",
+    "print(arr.reshape(-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2,  3],\n",
+       "       [ 4,  5,  6],\n",
+       "       [ 7,  8,  9],\n",
+       "       [10, 11, 12]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr=np.array([1,2,3,4,5,6,7,8,9,10,11,12])\n",
+    "rs=arr.reshape(4,3)\n",
+    "rs"
+   ]
   },
   {
    "attachments": {},
@@ -408,6 +942,135 @@
     "S=pd.Series((a))\n",
     "S\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a    1\n",
+       "b    2\n",
+       "c    3\n",
+       "d    4\n",
+       "e    5\n",
+       "f    6\n",
+       "dtype: int32"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "a=np.array([1,2,3,4,5,6])\n",
+    "S=pd.Series(a, index=['a','b','c','d','e','f'])\n",
+    "\n",
+    "S['a']\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1\n",
+       "1    2\n",
+       "2    3\n",
+       "3    4\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l1=[1,2,3,4]\n",
+    "pd.Series(l1)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "homework"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Name  Age  Grade\n",
+      "0  John   20      8\n",
+      "1  Emma   19      9\n",
+      "2  Adam   21      7\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "student_data = {\n",
+    "    'Name': ['John', 'Emma', 'Adam'],\n",
+    "    'Age': [20, 19, 21],\n",
+    "    'Grade': [8, 9, 7]\n",
+    "}\n",
+    "df = pd.DataFrame(student_data)\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Name  Age  Grade\n",
+      "0  John   20      8\n",
+      "1  Emma   19      9\n",
+      "2  Adam   21      7\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Create a dictionary with student information\n",
+    "student_data = {\n",
+    "    'Name': ['John', 'Emma', 'Adam', 'John', 'Adam'],\n",
+    "    'Age': [20, 19, 21, 20, 21],\n",
+    "    'Grade': [8, 9, 7, 8, 7]\n",
+    "}\n",
+    "\n",
+    "# Convert the dictionary to a DataFrame\n",
+    "df = pd.DataFrame(student_data)\n",
+    "\n",
+    "# Drop duplicate rows based on all columns\n",
+    "unique_students = df.drop_duplicates()\n",
+    "\n",
+    "# Print the unique student information\n",
+    "print(unique_students)"
    ]
   }
  ],
