--- a/program/MODULES/module_6.ipynb
+++ b/program/MODULES/module_6.ipynb
@@ -123,6 +123,19 @@
     "plt.legend(loc='lower right')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2 as cv\n",
+    "img = cv.imread(\"C:/Users/HP/Desktop/mypic.jpg\")\n",
+    "\n",
+    "cv.imshow(\"Display window\", img)\n",
+    "k = cv.waitKey(0) # Wait for a keystroke in the window"
+   ]
   }
  ],
  "metadata": {
