--- a/program/MODULES/module_6.ipynb
+++ b/program/MODULES/module_6.ipynb
@@ -136,6 +136,97 @@
     "cv.imshow(\"Display window\", img)\n",
     "k = cv.waitKey(0) # Wait for a keystroke in the window"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:`lr` is deprecated in Keras optimizer, please use `learning_rate` or use the legacy optimizer, e.g.,tf.keras.optimizers.legacy.Adam.\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (2,) + inhomogeneous part.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 32\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[39mfor\u001b[39;00m episode \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(n_episodes):\n\u001b[0;32m     31\u001b[0m     state, total_reward \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39mreset(), \u001b[39m0\u001b[39m\n\u001b[1;32m---> 32\u001b[0m     state \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mreshape(state, [\u001b[39m1\u001b[39;49m, state_size])\n\u001b[0;32m     34\u001b[0m     \u001b[39mfor\u001b[39;00m time \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m500\u001b[39m):\n\u001b[0;32m     35\u001b[0m         \u001b[39mif\u001b[39;00m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mrand() \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m epsilon:\n",
+      "File \u001b[1;32m<__array_function__ internals>:200\u001b[0m, in \u001b[0;36mreshape\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\numpy\\core\\fromnumeric.py:298\u001b[0m, in \u001b[0;36mreshape\u001b[1;34m(a, newshape, order)\u001b[0m\n\u001b[0;32m    198\u001b[0m \u001b[39m@array_function_dispatch\u001b[39m(_reshape_dispatcher)\n\u001b[0;32m    199\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mreshape\u001b[39m(a, newshape, order\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mC\u001b[39m\u001b[39m'\u001b[39m):\n\u001b[0;32m    200\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    201\u001b[0m \u001b[39m    Gives a new shape to an array without changing its data.\u001b[39;00m\n\u001b[0;32m    202\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    296\u001b[0m \u001b[39m           [5, 6]])\u001b[39;00m\n\u001b[0;32m    297\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 298\u001b[0m     \u001b[39mreturn\u001b[39;00m _wrapfunc(a, \u001b[39m'\u001b[39;49m\u001b[39mreshape\u001b[39;49m\u001b[39m'\u001b[39;49m, newshape, order\u001b[39m=\u001b[39;49morder)\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\numpy\\core\\fromnumeric.py:54\u001b[0m, in \u001b[0;36m_wrapfunc\u001b[1;34m(obj, method, *args, **kwds)\u001b[0m\n\u001b[0;32m     52\u001b[0m bound \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39m(obj, method, \u001b[39mNone\u001b[39;00m)\n\u001b[0;32m     53\u001b[0m \u001b[39mif\u001b[39;00m bound \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m---> 54\u001b[0m     \u001b[39mreturn\u001b[39;00m _wrapit(obj, method, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwds)\n\u001b[0;32m     56\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m     57\u001b[0m     \u001b[39mreturn\u001b[39;00m bound(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwds)\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\numpy\\core\\fromnumeric.py:43\u001b[0m, in \u001b[0;36m_wrapit\u001b[1;34m(obj, method, *args, **kwds)\u001b[0m\n\u001b[0;32m     41\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m:\n\u001b[0;32m     42\u001b[0m     wrap \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m---> 43\u001b[0m result \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39m(asarray(obj), method)(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwds)\n\u001b[0;32m     44\u001b[0m \u001b[39mif\u001b[39;00m wrap:\n\u001b[0;32m     45\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(result, mu\u001b[39m.\u001b[39mndarray):\n",
+      "\u001b[1;31mValueError\u001b[0m: setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (2,) + inhomogeneous part."
+     ]
+    }
+   ],
+   "source": [
+    "import gym\n",
+    "import numpy as np\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense\n",
+    "from keras.optimizers import Adam\n",
+    "from collections import deque\n",
+    "import random\n",
+    "\n",
+    "# Create the CartPole environmen\n",
+    "env = gym.make('CartPole-v1')\n",
+    "\n",
+    "state_size = env.observation_space.shape[0]\n",
+    "action_size = env.action_space.n\n",
+    "\n",
+    "# Define the DQN model\n",
+    "model = Sequential([\n",
+    "    Dense(24, input_dim=state_size, activation='relu'),\n",
+    "    Dense(24, activation='relu'),\n",
+    "    Dense(action_size, activation='linear')\n",
+    "])\n",
+    "\n",
+    "model.compile(loss='mse', optimizer=Adam(lr=0.001))\n",
+    "\n",
+    "# Initialize replay memory\n",
+    "memory = deque(maxlen=2000)\n",
+    "# Hyperparameters\n",
+    "gamma, epsilon, epsilon_min, epsilon_decay = 0.95, 1.0, 0.01, 0.995\n",
+    "batch_size, n_episodes = 32, 1000\n",
+    "# Main training loop\n",
+    "for episode in range(n_episodes):\n",
+    "    state, total_reward = env.reset(), 0\n",
+    "    state = np.reshape(state, [1, state_size])\n",
+    "\n",
+    "    for time in range(500):\n",
+    "        if np.random.rand() <= epsilon:\n",
+    "            action = env.action_space.sample()\n",
+    "        else:\n",
+    "            action = np.argmax(model.predict(state)[0])\n",
+    "\n",
+    "        next_state, reward, done, _ = env.step(action)\n",
+    "        next_state = np.reshape(next_state, [1, state_size])\n",
+    "        total_reward += reward\n",
+    "\n",
+    "        memory.append((state, action, reward, next_state, done))\n",
+    "        state = next_state\n",
+    "\n",
+    "        if done:\n",
+    "            print(f\"Episode: {episode + 1}, Score: {time + 1}, Epsilon: {epsilon:.2f}\")\n",
+    "            break\n",
+    "            \n",
+    "        if len(memory) > batch_size:\n",
+    "            minibatch = random.sample(memory, batch_size)\n",
+    "            for state, action, reward, next_state, done in minibatch:\n",
+    "                target = reward + gamma * np.amax(model.predict(next_state)[0])\n",
+    "                target_f = model.predict(state)\n",
+    "                target_f[0][action] = target\n",
+    "                model.fit(state, target_f, epochs=1, verbose=0)\n",
+    "    epsilon = max(epsilon * epsilon_decay, epsilon_min)\n",
+    "\n",
+    "env.close()"
+   ]
   }
  ],
  "metadata": {
@@ -154,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.17"
   },
   "orig_nbformat": 4
  },
